Fixed .read-more section causing scrollbars

--- a/assets/css/_read-more.scss
+++ b/assets/css/_read-more.scss
@@ -1,6 +1,6 @@
 .read-more {
     clear: both;
-    width: 100vw;
+    width: 100%;
     border-top: $border;
 
     >div {
